assets/less/main.less
@import "normalize.less";
@import "preboot.less";
@import "highlighting.less";
@import "elusive-webfont.less";

body {
	color: @text-color;
	font-size: @size-base;
	font-family: @font-family-base;
	line-height: @line-height-base;
	background-color: @body-background;
	.retina-image("../img/tex2res4.png", "../img/tex2res4_@2X.png", 500, 500);
}

a {
	color: @link-color;

	&:hover {
		color: @link-color-hover;
	}
}

h1, h2, h3, h4, h5, h6 {
	font-family: @headings-font-family;
	font-weight: @headings-font-weight;
	text-rendering: optimizeLegibility;
	line-height: 1.2;

	a {
		text-decoration: none;
	}
}

h1 { font-size: @size-huge; }
h2 { font-size: @size-larger; }
h3 { font-size: @size-large; }
h4 { font-weight: 400; font-style: italic; }
h5 { font-size: @size-base; }
h6 { font-size: @size-small; }

code, kbd, pre, samp {
	font-family: @font-family-monospace;
}

header {
	padding-top: @size-larger;
	padding-bottom: @size-huge;

	@media (max-width: 30rem) {
		padding-bottom: @size-large;
	}

	a {
		text-decoration: none;
	}

	h1 {
		margin: 0;
		font-size: @size-massive;
		line-height: 1;
		text-align: center;
		text-transform: uppercase;
		font-family: "Iceberg", @headings-font-family;
		letter-spacing: -@size-small;

		.header-shadow(@offset, @opacity) {
			color: rgba(127, 255, 0, @opacity);
			text-shadow: @offset @offset 0 rgba(254, 254, 34, @opacity);
		}

		@media (min-width: (@sidebar-width + @article-width)) {
			font-size: @size-epic;
		}

		@media (max-width: 30rem) {
			font-size: @size-huge;
			letter-spacing: -@size-mini;
		}

		@media (max-width: 15rem) {
			font-size: @size-larger;
		}

		a {
			.header-shadow(@size-micro, 0.5);
				
			&:hover {
				.header-shadow(@size-micro, 0.7);
			}

			@media (min-width: (@sidebar-width + @article-width)) {
				.header-shadow(@size-mini, 0.5);

				&:hover {
					.header-shadow(@size-mini, 0.7);
				}
			}

			@media (max-width: 30rem) {
				.header-shadow(@size-nano, 0.5);

				&:hover {
					.header-shadow(@size-nano, 0.7);
				}
			}
		}
	}

	nav {
		ul {
			padding: 0;
			width: 100%;
			list-style: none;
			text-align: center;
			font-size: @size-large;

			@media (max-width: 30rem) {
				overflow: hidden;
				white-space: nowrap;
				font-size: @size-medium;
			}

			li {
				padding: 0;
				margin: 0 @size-mini;
				display: inline;
				font-family: "Iceberg", @headings-font-family;

				@media (max-width: 30rem) {
					line-height: @size-larger;
					margin: 0;
				}

				a {
					padding: @size-mini @size-small;
					color: @text-color;
					background-color: rgba(127, 255, 0, 0.5);
					.box-shadow(@size-micro @size-micro 0 rgba(254, 254, 34, 0.5));

					@media (max-width: 30rem) {
						.box-shadow(none);
					}

					&:hover {
						color: #f3f6f1;
						background-color: rgba(127, 255, 0, 0.7);
						.box-shadow(@size-micro @size-micro 0 rgba(254, 254, 34, 0.7));

						@media (max-width: 30rem) {
							.box-shadow(none);
						}
					}
				}
			}
		}
	}

	canvas {
		.center-block;
	}
}

#container {
	max-width: @article-width;
	padding: @size-mini 0;
	background: fade(white, 30%);
	.center-block;
	.clearfix;

	@media (min-width: (@sidebar-width + @article-width)) {
		width: @sidebar-width + @article-width;
		max-width: none;
	}
}

#sidebar {
	display: none;
	padding: @size-base;
  .box-sizing(border-box);
	margin-left: -@size-small;
	width: @sidebar-width;
	background-color: fade(#f1f3f6, 90%);
	.box-shadow(~"-@{size-micro} -@{size-micro} 0 rgba(127, 255, 0, 0.5), @{size-micro} @{size-micro} 0 rgba(254, 254, 34, 0.5)");

	@media (min-width: (@sidebar-width + @article-width)) {
		display: block;
	}

	h2 {
		background: fade(white, 30%);
		font-size: @size-medium;
		font-weight: bold;
		margin: @size-base -@size-base;
		padding: @size-small @size-base;
	}

	i {
		color: @text-color;
	}

	ul {
		list-style: none;
		padding: 0;
		margin: 0;

		&:last-child {
			margin-bottom: 0;
		}
	}

	ul.recent {
		li {
			padding-bottom: @size-small;

			&:last-child {
				padding-bottom: 0;
			}
		}
	}

	a {
		text-decoration: none;
	}
}

article {
	padding: @size-large;
  .box-sizing(border-box);
	margin-bottom: (2 * @size-base) - (2 * @size-mini);
	background-color: fade(#f1f3f6, 90%);
	font-size: @size-base;
	.box-shadow(~"-@{size-micro} -@{size-micro} 0 rgba(127, 255, 0, 0.5), @{size-micro} @{size-micro} 0 rgba(254, 254, 34, 0.5)");
	text-rendering: optimizeLegibility;
	word-wrap: break-word;

	@media (min-width: (@sidebar-width + @article-width)) {
		float: right;
		width: @article-width;
		margin-right: -@size-small;
		margin-left: -@size-small;
	}

	@media (max-width: 30rem) {
		padding: @size-base;
	}

	h1, h2, h3, h4, h5, h6 {
		margin: @size-base 0 @size-base 0;
	}

	h1:first-child {
		margin-top: 0;
		margin-bottom: @size-large;
		font-weight: bold;
		font-size: @size-larger;
		letter-spacing: -@size-nano;

		@media (max-width: 30rem) {
			line-height: 1.0;
		}

		a {
			color: @text-color;

			&:hover {
				color: @link-color;
				text-shadow: fade(@link-color, 75%) 0 0 20px;
			}
		}
	}

	h2 {
		background: fade(white, 30%);
		font-size: @size-large;
		font-weight: bold;
		margin-left: -@size-large;
		margin-right: -@size-large;
		padding: @size-small @size-large;

		@media (max-width: 30rem) {
			margin-left: -@size-base;
			margin-right: -@size-base;
			padding: @size-base;
		}
	}

	hr {
		margin: 0 -@size-large @size-base;
		border: none;
		border-top: @size-base solid fade(white, 30%);

		@media (max-width: 30rem) {
			margin-left: -@size-base;
			margin-right: -@size-base;
		}
	}

	ul, ol {
		padding-left: @size-base;
	}

	p {
		margin: 0 0 @size-base 0;
	}

	.figure {
		margin-left: -@size-large;
		margin-right: -@size-large;
        margin-bottom: @size-base;

        img {
            width: 100%;
        }

	    .caption {
            display: none;
	    }

        &:hover {
            .caption {
                display: none;
            }
        }
	}

	b, strong {
		font-weight: normal;
		font-style: italic;
	}

	blockquote {
		margin: @size-base @size-large @size-base @size-large;
	}

	pre {
		font-size: @size-medsmall;
		line-height: @size-base;
		padding: @size-small;
		margin: 0 0 @size-base 0;
		word-wrap: normal;
		white-space: pre;
		overflow: auto;
	}
}

footer {
	padding: 0 @size-base;
	font-size: @size-medsmall;
  .box-sizing(border-box);
	margin-top: @size-large;
	background-color: fade(#f1f3f6, 90%);
	.box-shadow(~"-@{size-micro} -@{size-micro} 0 rgba(127, 255, 0, 0.5), @{size-micro} @{size-micro} 0 rgba(254, 254, 34, 0.5)");
	.clearfix;
	clear: both;

	@media (min-width: (@sidebar-width + @article-width)) {
		margin-right: -@size-small;
		margin-left: -@size-small;
	}
}

